fix compile errors from merge