@@ -31,17 +31,17 @@ public class BeltDeployerCallbacksMixin {
                 && !collect.isEmpty()
                 && PackageItem.isPackage(transported.stack)
                 && CardboardPlaneReg.CARDBOARD_PLANE_PARTS_ITEM.isIn(blockEntity.getPlayer().getMainHandItem())
-                && collect.getFirst().stack.getItem() instanceof CardboardPlaneItem) {
-            CardboardPlaneItem.setPackage(collect.getFirst().stack, transported.stack);
+                && collect.get(0).stack.getItem() instanceof CardboardPlaneItem) {
+            CardboardPlaneItem.setPackage(collect.get(0).stack, transported.stack);
         }
 
         if (collect != null
                 && !collect.isEmpty()
                 && transported.stack.getItem() instanceof CardboardPlaneItem
                 && blockEntity.getPlayer().getMainHandItem().is(Items.SHEARS)
-                && collect.getFirst().stack.getItem() instanceof CardboardPlaneItem) {
-            collect.getFirst().stack = transported.stack.copy();
-            CardboardPlaneItem.setPreOpened(collect.getFirst().stack, true);
+                && collect.get(0).stack.getItem() instanceof CardboardPlaneItem) {
+            collect.get(0).stack = transported.stack.copy();
+            CardboardPlaneItem.setPreOpened(collect.get(0).stack, true);
         }
     }
 }
